# alt-snap-windows

./: .clang-format  .editorconfig  .gitignore  AltSnap.ini  AltSnap.md  AltSnap.txt  CMakeLists.txt  CMakeSettings.json  Makefile  MakefileClang  MakefileClangDebug  MakefileDebug  MakefileTCC  MakefileX64  MakefileX64Debug  MakefileX64db  README.md  README_ko-KR.md  README_zh-CN.md  altsnap.c  altsnap.nsi  altsnap.rc  altsnap.ref.rc  config.cxx  config.inl  cspell.config.yaml  env.bat  framework.h  hooks.c  hooks.h  languages.c  languages.h  languages.inl  makerelease.bat  mk.bat  mk64.bat  mkvcc6.bat  nanolibc.h  nsi.bat  resource.h  (+9 more)
.cspell/: windows-alt-snap.txt
.github/workflows/: makefile.yml
docs/: cmake.md  todo.md
languages/: _en_US baseline.txt  pl_PL.ini
project/: AltSnap.sln  AltSnap.vcxproj  AltSnap.vcxproj.filters  AltSnapHooks.vcxproj  AltSnapHooks.vcxproj.filters
